--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
     <body>
         <div class="container">
-
+            <div class="header"></div>
+            <div class="likes"></div>
+            <div class="posts"></div>
         </div>
     </body>
 
