more styling and js organization

--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
         <title>CitizenNet</title>
          <link rel="stylesheet" href="css/style.css">
          <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+         <script src="js/posts.js"></script>
+         <script src="js/likes.js"></script>
          <script src="js/apps.js"></script>
     </head>
 
     <body>
         <div class="container">
             <div class="header"></div>
-            <div class="likes"></div>
+            <div class="stats">
+                <div class="likes stat">
+                    <h2>Page Likes</h2>
+                </div>
+                <div class="mostlikes stat">
+                    <h2>Most Liked</h2>
+                </div>
+                <div class="mostcomments stat">
+                    <h2>Most Commented</h2>
+                </div>
+            </div>
             <div class="posts"></div>
         </div>
     </body>
