--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,8 @@
 		<script src="assets/js/angular.min.js.1"></script>
 		<script src="assets/js/angular-route.js"></script>
 		<script src="assets/js/angular-resource.js"></script>
-		<script src="assets/js/ui-bootstrap-tpls-0.3.0.min.js"></script>
+		<script src="assets/js/ui-bootstrap-tpls-0.10.0.min.js"></script>
+		<script src="assets/js/bootstrap.min.js"></script>
 		<script src="assets/js/ng-upload.min.js"></script>
 		<script src="assets/js/canvasjs.min.js"></script>
 		<script src="assets/js/jquery.flot.js"></script>
@@ -15,7 +16,8 @@
 		<script src="assets/js/html5slider.js"></script>
 		<script src="app.js"></script>
 		<script src="controllers/start.js"></script>
-		<link href="assets/css/bootstrap-combined.min.css" rel="stylesheet">
+		<link href="assets/css/bootstrap.min.css" rel="stylesheet">
+		<link href="assets/css/bootstrap-theme.min.css" rel="stylesheet">
 	</head>
 	<body class="container-fluid" >
 		<div class="row-fluid">
