--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
 		<script src="assets/js/jquery.flot.navigate.js"></script>
 		<script src="assets/js/jquery.flot.resize.js"></script>		
 		<script src="assets/js/html5slider.js"></script>
+		<script src="assets/js/d3.min.js"></script>
 		<script src="app.js"></script>
 		<script src="controllers/start.js"></script>
 		<link href="assets/css/bootstrap.min.css" rel="stylesheet">
