--- a/client/index.html
+++ b/client/index.html
@@ -20,9 +20,9 @@
 		<link href="assets/css/bootstrap.min.css" rel="stylesheet">
 		<link href="assets/css/bootstrap-theme.min.css" rel="stylesheet">
 	</head>
-	<body class="container-fluid" >
-		<div class="row-fluid">
-			<div ng-view class="span12"></div>
+	<body class="container" >
+		<div class="row">
+			<div ng-view class="col-md-12"></div>
 		</div>
 	</body>
 </html>
