--- a/citizenNet.html
+++ b/citizenNet.html
@@ -32,7 +32,7 @@
             width: 95%;
             height: auto;
             float: left;
-            margin: 9px 5px;
+            margin: 9px;
            border: solid 1px;
             border-color: #666;
 
