--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,15 @@
     <!-- endbuild -->
   </head>
   <body ng-app="frontendEngineeringChallengeApp">
-    <header>Header dictated by index.html</header>
+    <header>
+      <nav>
+        <div class="contain">
+          <a href="index.html" class="logo" alt="Back to Home">
+            <img src="assets/images/logo.svg" alt="CitizeNet" class="logo">
+          </a>
+        </div>
+      </nav>
+    </header>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
