Modularizes API to Service, handles responses to successful API calls

--- a/client/index.html
+++ b/client/index.html
@@ -65,5 +65,8 @@
       <!-- Angular Controllers -->
       <script src="scripts/controllers/AdminCtrl.js"></script>
       <script src="scripts/controllers/DashboardCtrl.js"></script>
+
+      <!-- Angular Services -->
+      <script src="scripts/services/APIService.js"></script>
 </body>
 </html>
