adds record model, pushes and retrieves records from MongoLab

--- a/client/index.html
+++ b/client/index.html
@@ -68,5 +68,6 @@
 
       <!-- Angular Services -->
       <script src="scripts/services/APIService.js"></script>
+      <script src="scripts/services/LocalService.js"></script>
 </body>
 </html>
